--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-		<div class="dots">
-			
-		</div>
+		<div class="dots"></div>
 	</div>
 	<section id="about-us" class="container">
 		<div>
